--- a/style.css
+++ b/style.css
@@ -1,172 +1,152 @@
 header{
-margin-bottom: 10%;
-  }
-
-body{
-  background-image: url('images/bckg-img-Y.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: #EFD671;
-}
-/* COPY-PASTE FONT-FAMILY & FONT-SIZE INTO CONTAINER
-#todo-container{
-  display: flex;
-  margin-top: 15rem;
-  justify-content: center;
-  font-family: 'Varela Round', sans-serif;
-  font-size: 2.5rem;
-}
-*/
-
-ul{
-  list-style-type: none;
-}
-
-h1 {
-  font-family: 'Jua', sans-serif;
-  font-size: 4rem;
-  text-align: center;
-  color: #7070CC;
-}
-
-.delButton{
-  border : 3px solid green;
+  margin-bottom: 10%;
+    }
   
-  height : 50px;
-  width : 50px;
-  background-image : url(./images/delete.png);
-  background-repeat : no-repeat;
-  background-position : center;
-  border-radius: 50%;
-  position: relative;
-  text-align: center;
-  grid-column-start: 2;
-}
-
-
-.form{
-    min-width: 40%;
-    max-width: 45%; 
-    opacity: 0.9;
-    background-color:#7070CC;
-    border-radius: 0.5rem;
+  body{
+    background-image: url('images/bckg-img-Y.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #EFD671;
+  }
+   
+  ul{
+    list-style-type: none;
+  }
+  
+  h1 {
+    font-family: 'Jua', sans-serif;
+    font-size: 4rem;
+    text-align: center;
+    color: #7070CC;
+  }
+  
+  .delButton{
+    border : 3px solid green;
+    height : 50px;
+    width : 50px;
+    background-image : url(./images/delete.png);
+    background-repeat : no-repeat;
+    background-position : center;
+    border-radius: 50%;
     position: relative;
-    margin: 0.25rem auto;
-}
-
-ul {
-	list-style-type: none;
-}
-
-    li {
-      display: grid;
-      grid-template-columns: 70% 15% 15%;
-    width: 100%;
-    padding: 1.5rem 1.5rem 1.5rem 2rem;
-    box-sizing: border-box;
-    resize: vertical;
-    font-family: 'Varela+Round', sans-serif;
-    font-size: 1.7rem;
-    border: none;
+    text-align: center;
+    grid-column-start: 2;
   }
-
-  input[type=text]{
-    height: 7rem;
-    width: 75%; 
-    border: 0.25rem solid;
-    border-color: #7070CC;
-    border-radius: 0.5rem;
+  
+  
+  .form{
+      min-width: 40%;
+      max-width: 45%; 
+      opacity: 0.9;
+      background-color:#7070CC;
+      border-radius: 0.5rem;
+      position: relative;
+      margin: 0.25rem auto;
+      padding: 0.5rem;
   }
-
-
-  label{
-    height: 5rem;
-    width: 100%; 
-      padding: 0.25rem;
-      color: white;
-      display: inline-block;
-      font-family: 'Trebuchet', sans-serif;
-    font-size: 1.2rem;
-    border: 0.25rem solid;
-    border-color: #7070CC;
-    border-radius: 0.5rem;
-    margin: 0.25rem;
+  
+  ul {
+    list-style-type: none;
   }
-
-  #submit-button{
-    background-color: #FFD12A;
-    margin-top: 0.5rem;
-	  margin-left: auto;
-	  padding: 0.5rem;;
-    color: #3F26BF;
+  
+      li {
+        display: grid;
+        grid-template-columns: 70% 15% 15%;
+      width: 100%;
+      padding: 1.5rem 1.5rem 1.5rem 2rem;
+      box-sizing: border-box;
+      resize: vertical;
+      font-family: 'Varela+Round', sans-serif;
+      font-size: 1.7rem;
+      border: none;
+    }
+  
+    input[type=text]{
+      height: 7rem;
+      width: 75%; 
+      font-family: 'Varela+Round', sans-serif;
+      font-size: 2rem;
+      border: 0.25rem solid;
+      border-color: #7070CC;
+      border-radius: 0.5rem;
+    }
+  
+  
+     
+    #submit-button{
+      background-color: #FFD12A;
+      margin-top: 0.5rem;
+      margin-left: auto;
+      padding: 0.5rem;;
+      color: #3F26BF;
+      font-family: 'Pangolin', sans-serif;
+      font-size: 1.5rem;
+      font-weight: bold;
+      letter-spacing: 0.15rem;
+      border-radius: 0.25rem;
+  } 
+  
+  #submit-button:active {
+      background-color: #66b348;
+      -webkit-box-shadow: -0.1rem 0.1rem 0.1rem grey;
+      -moz-box-shadow: -0.1rem 0.1rem 0.1rem grey;
+      box-shadow: -0.1rem 0.1rem 0.1rem grey;
+      -webkit-transform: translateY(2px);
+      -moz-transform: translateY(2px);
+      transform: translateY(2px);
+  }
+  .markButton{
+    border : 3px solid green;
+    height : 50px;
+    width : 50px;
+    border-radius : 50%;
+    background-image: url("./images/green-tick.png");
+    background-size: cover;
+    grid-column-start: 3;
+  }
+  .unMarkButton{
+    border : 3px solid red;
+    height : 50px;
+    width : 50px;
+    border-radius : 50%;
+    background-image: url("./images/red-cross.png");
+    background-size: cover;
+    grid-column-start: 3;
+  }
+  
+  .line-through {
+    text-decoration: line-through;
+  }
+  
+  footer{
+    text-align: center;
     font-family: 'Pangolin', sans-serif;
-    font-size: 1.5rem;
-    font-weight: bold;
-    letter-spacing: 0.15rem;
-    border-radius: 0.25rem;
-} 
-
-form button:active {
-    background-color: #66b348;
-    -webkit-box-shadow: -0.1rem 0.1rem 0.1rem grey;
-    -moz-box-shadow: -0.1rem 0.1rem 0.1rem grey;
-    box-shadow: -0.1rem 0.1rem 0.1rem grey;
-    -webkit-transform: translateY(2px);
-    -moz-transform: translateY(2px);
-    transform: translateY(2px);
-}
-.markButton{
-  border : 3px solid green;
-  height : 50px;
-  width : 50px;
-  border-radius : 50%;
-  background-image: url("./images/green-tick.png");
-  background-size: cover;
-  grid-column-start: 3;
-}
-.unMarkButton{
-  border : 3px solid red;
-  height : 50px;
-  width : 50px;
-  border-radius : 50%;
-  background-image: url("./images/red-cross.png");
-  background-size: cover;
-  grid-column-start: 3;
-}
-
-.line-through {
-  text-decoration: line-through;
-}
-
-footer{
-  text-align: center;
-  font-family: 'Pangolin', sans-serif;
-    font-size: 0.9rem;
-    margin-top: 4rem;
-    margin-bottom: 2rem;
-}
-
-
-
-/*MEDIA QUERIES*/
-
-/*FOR SCREENS OVER 600px*/
-/* 
-@media screen and (min-width:600px) {
-  
-header{
-margin-bottom: 8%;
-}
-
-
-.form{
-  min-width: 40%;
-  max-width: 40%;
-  margin:1% auto;
+      font-size: 0.9rem;
+      margin-top: 4rem;
+      margin-bottom: 2rem;
   }
   
-  input[type=text]{
-    height: 5rem;
-    width: 100%; 
+  
+  
+  /*MEDIA QUERIES*/
+  
+  /*FOR SCREENS OVER 600px*/
+  /* 
+  @media screen and (min-width:600px) {
+    
+  header{
+  margin-bottom: 8%;
   }
-} */
+  
+  
+  .form{
+    min-width: 40%;
+    max-width: 40%;
+    margin:1% auto;
+    }
+    
+    input[type=text]{
+      height: 5rem;
+      width: 100%; 
+    }
+  } */
